--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>ros_bt_py</name>
-  <version>0.0.0</version>
+  <version>1.0.0</version>
   <description>A type-safe Behavior Tree library (until the wheels fall off)</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="khermann@fzi.de">Kai-Uwe Hermann</maintainer>
+  <maintainer email="heppner@fzi.de">Georg Heppner</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>proprietary</license>
+  <license>BDS-3-Clause</license>
 
-  <url type="website">https://ids-git.fzi.de/ros/ros_bt_py</url>
+  <url type="website">https://github.com/fzi-forschungszentrum-informatik/ros_bt_py</url>
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
   <!-- Authors do not have to be maintainers, but could be -->
   <!-- Example: -->
-  <author email="berg@fzi.de">Nils Berg</author>
-  <author email="khermann@fzi.de">Kai-Uwe Hermann</author>
+  <author>Nils Berg</author>
+  <author>Kai-Uwe Hermann</author>
+  <author email="heppner@fzi.de">Georg Heppner</author>
 
 
   <buildtool_depend>catkin</buildtool_depend>
