Implement visual representation of the  capability interfaces and implementations in the editor.

--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -19,6 +19,7 @@
   <!-- Example: -->
   <author>Nils Berg</author>
   <author>Kai-Uwe Hermann</author>
+  <author email="oberacker@fzi.de">David Oberacker</author>
   <author email="heppner@fzi.de">Georg Heppner</author>
 
 
