Added capability file.
Implement remote execution interface on the capability class.

Misc changes

Add runtime class factory for capability nodes.

Add documentation to the capability_node_class_from_capability_interface function.

Add some safeguards to the capability __init__ function to avoid invalid instances.

Add advanced naming schema to avoid name conflicts for interfaces.

Add dynamic capability node creation to tree_node.

Improve imports in tree_manager.py
Remove invalid if statement for capabilities in capability.py
Add ros subscriber callback for capability node creation to capability.py

Improve naming schema for capability nodes.

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -77,6 +77,8 @@ add_action_files(
   FILES
   FindBestExecutor.action
   RunTree.action
+  FindBestCapabilityImplementation.action
+  ExecuteImplementation.action
   )
 
 ## Generate added messages and services with any dependencies listed here
