--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,4 @@
 *.swp
 ros_bt_py/doc/build/
 ros_bt_py/test/testdata/save_data/generated_files/
-.vscode/
-ros_bt_py/capability_interfaces
+ros_bt_py/capabilities
