Add interface for capability implementation reception.
Add local_auction_manager.py which implements a auction manger for local implementations.

Rename CapabilityRepository to MissionControl.

Add assignment manager interface to allow for node assignments.

Add comments to the assignment_manager.py and assignment_manager_node.py.

Add ExecuteCapability action.

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -62,6 +62,10 @@ add_service_files(
   SetOptions.srv
   TestService.srv
   WireNodeData.srv
+  AddAssignmentRequest.srv
+  GetAssignmentRequestResult.srv
+  GetAssignmentRequestStatus.srv
+  CancelAssignmentRequest.srv
   capabilities/GetCapabilityInterfaces.srv
   capabilities/LoadCapabilities.srv
   capabilities/SaveCapabilities.srv
