Implement GetLocalBid action in mission_control.py
Change implementation_name to name in CapabilityImplementation.msg.

Implement PrepareLocalImplementation service in mission_control.py

Add service to check for remote preconditions.
Add method to check for local precondition.
Implement service to get the local bid.

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -28,6 +28,7 @@ add_message_files(
      UtilityBounds.msg
      CapabilityInterface.msg
      CapabilityImplementation.msg
+     Precondition.msg
      )
 
 ## Generate services in the 'srv' folder
@@ -62,10 +63,8 @@ add_service_files(
   SetOptions.srv
   TestService.srv
   WireNodeData.srv
-  AddAssignmentRequest.srv
-  GetAssignmentRequestResult.srv
-  GetAssignmentRequestStatus.srv
-  CancelAssignmentRequest.srv
+  capabilities/CheckPreconditionStatus.srv
+  capabilities/NotifyCapabilityExecutionStatus.srv
   capabilities/GetCapabilityInterfaces.srv
   capabilities/LoadCapabilities.srv
   capabilities/SaveCapabilities.srv
