Fix bug where input and output bridge pub/sub were unregistered before being used.
Switch from actionlib actions to async services.

Async services are simpler and more reliable to use than actions, thus I switched to allow for parallel execution of nodes, etc.

Fix bug where executing a capability in a capability caused it to revert to the UNASSIGNED state.

Changed the Behavior to use the same debug manager for all local capabilities.

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -40,13 +40,16 @@ add_service_files(
   AddNodeAtIndex.srv
   capabilities/CheckPreconditionStatus.srv
   capabilities/DeleteCapabilityImplementation.srv
+  capabilities/FindBestCapabilityExecutor.srv
   capabilities/GetCapabilityImplementations.srv
   capabilities/GetCapabilityInterfaces.srv
+  capabilities/GetLocalBid.srv
   capabilities/LoadCapabilities.srv
   capabilities/NotifyCapabilityExecutionStatus.srv
   capabilities/PrepareLocalImplementation.srv
   capabilities/PutCapabilityImplementation.srv
   capabilities/PutCapabilityInterfaces.srv
+  capabilities/RequestCapabilityExecution.srv
   capabilities/SaveCapabilities.srv
   capabilities/UpdateCapabilityInterfaces.srv
   ChangeTreeName.srv
@@ -81,11 +84,8 @@ add_service_files(
 ## Generate actions in the 'action' folder
 add_action_files(
   FILES
-  ExecuteCapability.action
   ExecuteCapabilityImplementation.action
   ExecuteRemoteCapability.action
-  FindBestCapabilityExecutor.action
-  GetLocalBid.action
   RunTree.action
   )
 
