Switch remote capability slot execution from actionlib to ros services.
Enable retries if no remote executor is available at the moment!

Remove unnecessary logging stuff.

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -39,6 +39,7 @@ add_service_files(
   FILES
   AddNode.srv
   AddNodeAtIndex.srv
+  capabilities/CancelRemoteCapabilitySlot.srv
   capabilities/CheckPreconditionStatus.srv
   capabilities/DeleteCapabilityImplementation.srv
   capabilities/FindBestCapabilityExecutor.srv
@@ -50,6 +51,7 @@ add_service_files(
   capabilities/PutCapabilityImplementation.srv
   capabilities/PutCapabilityInterfaces.srv
   capabilities/RequestCapabilityExecution.srv
+  capabilities/RunRemoteCapabilitySlot.srv
   capabilities/SaveCapabilities.srv
   capabilities/UpdateCapabilityInterfaces.srv
   ChangeTreeName.srv
@@ -84,7 +86,6 @@ add_service_files(
 ## Generate actions in the 'action' folder
 add_action_files(
   FILES
-  ExecuteCapabilityImplementation.action
   ExecuteRemoteCapability.action
   RunTree.action
   FindBestExecutor.action
