Improved workaround to allow utility calculation.
Implement two new flags name simulate_tick and succeed_auto to allow
utility calculation without executing nodes that change the external
state of the system.

--- a/ros_bt_py_msgs/CMakeLists.txt
+++ b/ros_bt_py_msgs/CMakeLists.txt
@@ -82,6 +82,7 @@ add_service_files(
   SaveTree.srv
   SetExecutionMode.srv
   SetOptions.srv
+  SetSimulateTick.srv
   TestService.srv
   WireNodeData.srv
   )
