--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,14 @@
-include:
-  - project: 'continuous_integration/ci_scripts'
-    ref: master
-    file: '/gitlab-ci-yml/catkin_pipeline.yml'
-
-industrial_ci_melodic:
-  retry:
-    max: 1
-    when:
-      - script_failure
-  artifacts:
-    when: always
-    reports:
-      junit: test_results/ros_bt_py/*.xml
-
-industrial_ci_noetic:
-  retry:
-    max: 1
-    when:
-      - script_failure
-  artifacts:
-    when: always
-    reports:
-      junit: test_results/ros_bt_py/*.xml
-
 variables:
-  BUILD_NOETIC: "true"
+  CI_SCRIPTS_BRANCH: master
+
+catkin_pipelines:
+  trigger:
+    include:
+      - project: 'continuous_integration/ci_scripts'
+        ref: $CI_SCRIPTS_BRANCH
+        file: '/gitlab-ci-yml/catkin_pipeline_v2.yml'
+    strategy: depend
+  parallel:
+    matrix:
+      - ROS_DISTRO: noetic
+        CI_IMAGE: ids-git.fzi.de:5555/continuous_integration/ci_docker_images/ubuntu_20.04_ros
