--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
       - id: check-executables-have-shebangs
       - id: fix-byte-order-marker  # Forbid UTF-8 byte-order markers
       - id: no-commit-to-branch
-        args: [--branch, dev, --branch, main]
+        args: [--branch, master]
   - repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
