Add doc building ci.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 variables:
   CI_SCRIPTS_BRANCH: master
+  DOCS_SOURCE: "ros_bt_py/doc/source"
+
 
 catkin_pipelines:
   trigger:
@@ -12,3 +14,8 @@ catkin_pipelines:
     matrix:
       - ROS_DISTRO: noetic
         CI_IMAGE: ids-git.fzi.de:5555/continuous_integration/ci_docker_images/ubuntu_20.04_ros
+
+include:
+  - project: 'continuous_integration/ci_scripts'
+    ref: docs
+    file: '/gitlab-ci-yml/doc_sphinx.yml'
