Add capability tests
Add capability tests

Add capability tests

Fix test issues.

Fix some tests.

Add tests for capabilities.

Fix test failures and msgs package cmake.

Add missing test capability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-.idea
-.vscode
 *.pyc
 *.swp
 ros_bt_py/doc/build/
 ros_bt_py/test/testdata/save_data/generated_files/
-ros_bt_py/capabilities
+.vscode/
+.idea/
+ros_bt_py/capabilities/
+! ros_bt_py/capabilities/AddTwoCapability/
+ros_bt_py/test/testdata/save_data/existing_files/
