--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,27 @@ ignore = E203, E266, W503, F403, F401
 max-line-length = 99
 max-complexity = 25
 select = B,C,E,F,W,T4,B9
+
+[coverage:run]
+omit=
+  /usr*
+  /opt*
+  */devel*
+  *test/*
+  *tests/*
+  */.local*
+  */install*
+
+[coverage:paths]
+library=
+  ros_bt_py/
+  /builds/*/ros_bt_py/ros_bt_py
+  /root/target_ws/src/ros_bt_py/ros_bt_py
+msgs=
+  ros_bt_py_msgs/
+  /builds/*/ros_bt_py/ros_bt_py_msgs
+  /root/target_ws/src/ros_bt_py/ros_bt_py_msgs
+web=
+  ros_bt_py_web_server/
+  /builds/*/ros_bt_py/ros_bt_py_web_server
+  /root/target_ws/src/ros_bt_py/ros_bt_py_web_server
