Fix missing/invalid dependencies.
Signed-off-by: David Oberacker <oberacker@fzi.de>

Fix typo

Signed-off-by: David Oberacker <oberacker@fzi.de>

Omit install files in coverage

Signed-off-by: David Oberacker <oberacker@fzi.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ exclude = '''
   | tests/data
 )/
 '''
+
 [tool.coverage.run]
 omit='''
   /usr*
@@ -25,8 +26,9 @@ omit='''
   *test/*
   *tests/*
   */.local*
-  */install*
+  *install*
 '''
+
 [tool.coverage.paths]
 library='''
   ros_bt_py/
