--- a/ros_bt_py/package.xml
+++ b/ros_bt_py/package.xml
@@ -25,12 +25,10 @@
   <exec_depend>ros_bt_py_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-jsonpickle</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-jsonpickle</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-requests</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-requests</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-simplejson</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-simplejson</exec_depend>
+  <exec_depend>diagnostic_msgs</exec_depend>
+  <exec_depend>python3-jsonpickle</exec_depend>
+  <exec_depend>python3-requests</exec_depend>
+  <exec_depend>python3-simplejson</exec_depend>
   <exec_depend>ros_bt_py_web_server</exec_depend>
   <exec_depend>rosbridge_suite</exec_depend>
   <exec_depend>rosbridge_server</exec_depend>
@@ -42,15 +40,11 @@
   <test_depend>std_msgs</test_depend>
   <test_depend>std_srvs</test_depend>
   <test_depend>actionlib_tutorials</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-mock</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-mock</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-requests</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-requests</test_depend>
+  <test_depend>python3-mock</test_depend>
+  <test_depend>python3-requests</test_depend>
 
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-autobahn</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-autobahn</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-twisted-core</test_depend>
-  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-twisted</test_depend>
+  <test_depend>python3-autobahn</test_depend>
+  <test_depend>python3-twisted</test_depend>
   <export>
   </export>
 </package>
