Remove duplicate coverage configuration.
Signed-off-by: David Oberacker <oberacker@fzi.de>

Change CI_SCRIPTS_BRANCH

Signed-off-by: David Oberacker <oberacker@fzi.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 variables:
-  CI_SCRIPTS_BRANCH: dev
+  CI_SCRIPTS_BRANCH: master
   DOCS_SOURCE: "ros_bt_py/doc/source"
+
 
 .build_matrix:
   parallel:
