--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,13 @@ on:
     - cron: "0 7 * * *"
 
 jobs:
+  pre-commit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+      - uses: pre-commit/action@v3.0.0
+ 
   format_check:
     runs-on: ubuntu-latest
 
@@ -36,11 +43,10 @@ jobs:
         env:
           ROS_DISTRO: ${{ matrix.env.ROS_DISTRO }}
           ROS_REPO: ${{ matrix.env.ROS_REPO }}
-          AFTER_SCRIPT: "cp -r /root/target_ws/build /root/target_ws/src/ros_bt_py/build;"
           BASEDIR: ${{ github.workspace }}/.build
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
           files: |
-            ${{ github.workspace }}/.build/target_ws/build/**/*.xml
+            ${{ github.workspace }}/.build/target_ws/build/**/test_results/**/*.xml
