--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,13 @@
 name: Industrial CI pipeline
 on:
   push:
+    branches:
+      - master
   pull_request:
   schedule:
     - cron: "0 7 * * *"
 
 jobs:
-  pre-commit:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-      - uses: pre-commit/action@v3.0.0
- 
   format_check:
     runs-on: ubuntu-latest
 
