Added Coverage Script to workflow
Signed-off-by: Niklas Spielbauer <spielbauer@fzi.de>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,3 +45,5 @@ jobs:
         with:
           files: |
             ${{ github.workspace }}/.build/target_ws/build/**/test_results/**/*.xml
+      - name: Generate Coverage
+        run: ../scripts/python_coverage.sh
